src/test/resources/lox/error/result_or_nil.lox
fun foo(x) {
    if (x == 0) return Error("This is an error");
    return Ok("Hello");
}

var ok = foo(0).orNil();
print ok is Ok; // expect: false
print ok; // expect: nil
